fix(admin): filter cluster by names, not cluster_names
